# ProgettoSDCC

./: .gitignore  ANSIBLE.md  FAST_EC2_DEPLOY.md  README.md  SWARM.md  cassandra.yaml  config.properties  copy-files-to-ec2.sh  docker-build.sh  docker-compose.yml  docker-run.sh  docker-stack.yml  generate-grpc.sh  init-ec2.sh  package-lock.json  package.json  terraform.tfstate
.run/: Ansible copy files.run.xml  Ansible init ec2.run.xml  Build Frontend.run.xml  Run Frontend.run.xml  Terraform Apply.run.xml  Terraform Destroy.run.xml
ansible/: hosts.ini  inventory.yaml  playbook-copyfiles.yaml  playbook.yaml
docker/: Dockerfile.apigateway  Dockerfile.cassandra  Dockerfile.consumptions  Dockerfile.notifications  Dockerfile.productstorage  Dockerfile.recipes  Dockerfile.shoppinglist  Dockerfile.summary
src/: .dockerignore  product_storage
src/api_gateway/: Cargo.toml  Dockerfile  api_gateway.proto  build.rs  consumptions.proto  notifications.proto  product_storage.proto  recipes.proto  shopping_list.proto  summary.proto
src/api_gateway/src/: lib.rs  main.rs  properties.rs
src/frontend/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
src/frontend/public/: bootstrap.css  cards-bootstrap.css  index.html  style.css
src/frontend/src/: App.js  (+4 more)
src/proto/: consumptions.proto  notifications.proto  product_storage.proto  recipes.proto  shopping_list.proto
terraform/: .gitignore  copy-files-to-ec2.sh  credentials  ec2config.properties  init-docker-on-ec2.sh  labsuser.pem  labsuser.ppk  main.tf  terraform.tfstate  terraform.tfstate.backup
(+137 files in other folders)
