[package]
name = "api_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.1"
async-trait = "0.1.57"
prost = "0.11.0"
prost-types = "0.11.1"
actix-web = "4"
chrono = "0.4"
java-properties = "1.4.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
serde_json = "1.0.64"

[build-dependencies]
tonic-build = "0.8.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "api_client"
path = "src/main.rs"
